--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meshblu-connector-particle-io",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Meshblu Connector ",
   "homepage": "https://github.com/octoblu/particle-io",
   "bugs": "https://github.com/octoblu/particle-io/issues",
@@ -30,8 +30,9 @@
     "coffee-script": "^1.10.0",
     "debug": "^2.2.0",
     "eventemitter2": "^1.0.0",
+    "lodash": "^4.12.0",
     "meshblu-connector-runner": "^4.0.2",
-    "octoblu-request-formatter": "^0.1.2",
+    "octoblu-request-formatter": "^0.1.4",
     "request": "^2.72.0"
   },
   "meshbluConnector": {
